--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,9 @@
 $space-large: 10.5rem;
 
+*:focus {
+    outline: none;
+}
+
 .page-title {
     margin-top: $space-large;
     margin-bottom: $space-large;
@@ -19,12 +23,23 @@ input[type=search] {
     border-bottom: 11px solid transparent;
 }
 
+.bounce {
+  animation: bounce 0.3s;
+  opacity: 1;
+}
+
+@keyframes bounce {
+  0% {transform: scale(0); opacity: 0 }
+  50% {transform: scale(1)}
+  100% { transform: scale(1); opacity: 1; }
+}
+
 #pause {
     position: relative;
     width: 15px;
     height: 21px;
-    margin-top: 0px;
-    margin-left: 8px;
+    margin-top: -2px;
+    margin-left: 7px;
     border-right: 6px solid #fff;
     border-left: 6px solid #fff;
 }
