--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,12 +1,18 @@
-$space-large: 10.5rem;
+$space-large: 2.5rem;
+$font-color: #252525;
 
 *:focus {
     outline: none;
 }
 
 .page-title {
+    color: $font-color;
     margin-top: $space-large;
     margin-bottom: $space-large;
+}
+
+p{
+    color: $font-color;
 }
 
 input[type=search] {
@@ -57,15 +63,12 @@ input[type=search] {
 
 @keyframes fakeSpec {
     0%   {height: 9px;}
-    10%  {height: 8px;}
     25%  {height: 10px;}
-    35%  {height: 12px;}
+    35%  {height: 11px;}
     50%  {height: 10px;}
-    65%  {height: 9px;}
-    75%  {height: 11px;}
-    95%  {height: 13px;}
+    65%  {height: 11px;}
     100% {height: 9px;}
-    95%  {height: 12px;}
+    95%  {height: 11px;}
     70%  {height: 10px;}
     55%  {height: 8px;}
     50%  {height: 9px;}
